@@ -25,6 +25,29 @@ module Redcar
       end
       
       def run
+        case Redcar.platform
+        when :osx, :linux
+          run_posix
+        when :windows
+          run_windows
+        end
+      end
+      
+      def run_windows
+        @thread = Thread.new do
+          output = `#{@cmd} 2>&1`
+          html=<<-HTML
+          <div class="stdout">
+            <pre>#{output}</pre>
+          </div>
+          HTML
+          execute(<<-JAVASCRIPT)
+            $("#output").append(#{html.inspect});
+          JAVASCRIPT
+        end
+      end
+      
+      def run_posix
         @thread = Thread.new do
           sleep 1
           @shell = Session::Shell.new
@@ -77,4 +100,3 @@ module Redcar
   end
 end
 
-#   $("#output").append("#{out.gsub("\"", "\\\"")}")
